--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath "com.google.gms:google-services:4.3.4"
         classpath("com.android.tools.build:gradle:3.5.3")
-        classpath 'com.google.gms:google-services:4.3.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,7 +21,6 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -32,9 +31,9 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
-        
+        google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
-        // maven { url "https://maven.google.com" }
     }
 }
+project.ext{set('react-native',[versions:[firebase:[bom:'26.1.0'],],])}
