--- a/ios/rnfbdemo.xcodeproj/xcshareddata/xcschemes/rnfbdemo.xcscheme
+++ b/ios/rnfbdemo.xcodeproj/xcshareddata/xcschemes/rnfbdemo.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "clickloja-tvOS.app"
-               BlueprintName = "clickloja-tvOS"
-               ReferencedContainer = "container:clickloja.xcodeproj">
+               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+               BuildableName = "rnfbdemo.app"
+               BlueprintName = "rnfbdemo"
+               ReferencedContainer = "container:rnfbdemo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "clickloja-tvOSTests.xctest"
-               BlueprintName = "clickloja-tvOSTests"
-               ReferencedContainer = "container:clickloja.xcodeproj">
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "rnfbdemoTests.xctest"
+               BlueprintName = "rnfbdemoTests"
+               ReferencedContainer = "container:rnfbdemo.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "clickloja-tvOS.app"
-            BlueprintName = "clickloja-tvOS"
-            ReferencedContainer = "container:clickloja.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "rnfbdemo.app"
+            BlueprintName = "rnfbdemo"
+            ReferencedContainer = "container:rnfbdemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "clickloja-tvOS.app"
-            BlueprintName = "clickloja-tvOS"
-            ReferencedContainer = "container:clickloja.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "rnfbdemo.app"
+            BlueprintName = "rnfbdemo"
+            ReferencedContainer = "container:rnfbdemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
