--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clickloja",
+  "name": "rnfbdemo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,38 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/push-notification-ios": "^1.8.0",
-    "@react-native-community/viewpager": "^4.2.2",
-    "@react-native-firebase/app": "^10.4.0",
-    "@react-native-firebase/auth": "^10.4.1",
-    "@react-native-firebase/messaging": "^10.4.1",
-    "@react-native-picker/picker": "^1.9.10",
-    "@react-navigation/stack": "^5.12.8",
-    "@unform/core": "^2.1.3",
-    "@unform/mobile": "^2.1.3",
-    "axios": "^0.21.1",
+    "@react-native-firebase/app": "^10.5.0",
+    "@react-native-firebase/auth": "^10.5.1",
     "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-base64": "^0.2.1",
-    "react-native-best-viewpager": "^1.0.4",
-    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.3",
-    "react-native-pages": "^0.9.0",
-    "react-native-permissions": "^3.0.0",
-    "react-native-progress-circle": "^2.1.0",
-    "react-native-push-notification": "^7.0.0",
-    "react-native-qrcode-scanner": "^1.5.1"
+    "react-native": "0.63.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "16.13.1"
